# pyicloudng

./: .gitignore  README.md  pyproject.toml  requests.txt
scripts/: compile_and_upload.sh  compile_only.sh  upload_pypi.sh
src/pyicloudng/: __init__.py  base.py  cmdline.py  main.py
src/pyicloudng/services/: __init__.py  account.py  drive.py  findmyiphone.py  photos.py
tests/: test_app.py
