
# Generated using pyarchetype template
# pip install pyarchetype
# git clone https://github.com/redcorjo/pyicloudng.git
[project]
name = "pyicloudng"
version = "0.0.1"
description = "pyicloudng library to interact with icloud"
authors = [
  { name="JordiRedondo", email="redcorjo@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
"requests>=2.24.0",
"keyring>=21.4.0",
"keyrings.alt>=3.5.2",
"click>=7.1.2",
"tzlocal>=4.0",
"certifi>=2020.6.20",
"srp"
]

[project.urls]
"Homepage" = "https://github.com/redcorjo/pyicloudng"
"Bug Tracker" = "https://github.com/redcorjo/pyicloudng/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
pyicloudng = "pyicloudng.cmdline:main"
